# vcrpy

./: .codecov.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  Dangerfile  Gemfile  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  runtests.sh  setup.cfg  setup.py  test.py  test_requests.py  tox.ini
.github/: dependabot.yml
.github/workflflows/: danger-pr-reviews.yml
.github/workflows/: codespell.yml  docs.yml  lint.yml  main.yml  pre-commit-detect-outdated.yml  pre-commit.yml  tox.yml
docs/: Makefile  advanced.rst  api.rst  changelog.rst  cli.rst  conf.py  configuration.rst  contributing.rst  debugging.rst  index.rst  installation.rst  requirements.txt  usage.rst
tests/: assertions.py  common.py  test_basic.py  test_requests.py
tests/fixtures/: py2body_cassette.yaml  py3body_cassette.yaml
tests/fixtures/migration/: cassette_with_duplicate_requests.yaml  new_cassette.json  new_cassette.yaml  old_cassette.json  old_cassette.yaml
tests/fixtures/wild/: domain_redirect.yaml  synopsis.har
tests/integration/: aiohttp_utils.py  async_def.py  common.py  conftest.py  test_aiobotocore.py  test_aiohttp.py  test_basic.py  test_boto.py  test_boto3.py  test_config.py  test_disksaver.py  test_docker.py  test_filter.py  test_httplib2.py  test_https.py  test_httpx.py  test_httpx2.py  test_ignore.py  test_main.py  test_matchers.py  test_multiple.py  test_niquests.py  test_persist_callbacks.py  test_proxy.py  test_record_mode.py  test_register_matcher.py  test_register_persister.py  test_register_serializer.py  test_request.py  test_requests.py  test_stale_connection.py  test_streaming_request_body.py  test_stubs.py  test_tornado.py  test_urllib2.py  test_urllib3.py  test_wild.py  utils.py
tests/integration/cassettes/: DoAsyncRequesttest_httpx_test_test_behind_proxy.yml  DoSyncRequesttest_httpx_test_test_behind_proxy.yml  gzip_httpx_old_format.yaml  gzip_requests.yaml  test_httpx_test_test_auth_flow.yml  test_httpx_test_test_behind_proxy.yml  test_upload.yaml
tests/integration/python35/: aiohttp_utils.py  test_aiohttp.py
tests/unit/: test_cassettes.py  test_errors.py  test_file_upload.py  test_filters.py  test_json_serializer.py  test_matchers.py  test_migration.py  test_persist.py  test_request.py  test_response.py  test_serialize.py  test_stubs.py  test_unittest.py  test_util.py  test_vcr.py  test_vcr_import.py
vcr/: __init__.py  _compat.py  _handle_coroutine.py  cassette.py  cassette_nyf.py  cassette_yf.py  compat.py  config.py  counter.py  decorator.py  errors.py  files.py  filters.py  main.py  matchers.py  migration.py  patch.py  persist.py  record_mode.py  request.py  requests_stubs.py  serialize.py  stubs.py  unittest.py  urllib3_stubs.py  util.py
vcr/compat/: counter.py
vcr/persisters/: deduplicated_filesystem.py  filesystem.py  filesystem_cached.py
vcr/serializers/: compat.py  harserializer.py  jsonserializer.py  yamlserializer.py
vcr/stubs/: __init__.py  aiobotocore_stubs.py  aiohttp_stubs.py  boto3_stubs.py  boto_stubs.py  compat.py  docker_stubs.py  httpcore_stubs.py  httplib2_stubs.py  httpx_stubs.py  requests_stubs.py  tornado_stubs.py  urllib3_stubs.py
vcr/stubs/aiohttp_stubs/: __init__.py
vcr/unittest/: __init__.py  testcase.py
vcr/unittest/tests/: test_testcase.py
