[metadata]
name = vcrpy
version = attr: vcr.__version__
author = Kevin McCarthy
author_email = me@kevinmccarthy.org
license = MIT
description = Automatically mock your HTTP interactions to simplify and speed up testing
url = https://github.com/kevin1024/vcrpy
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Testing
    Topic :: Internet :: WWW/HTTP
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.10
install_requires =
    PyYAML
    wrapt
tests_require =
    vcrpy[tests]

[options.packages.find]
exclude = tests*

[options.extras_require]
tests =
    aiohttp
    boto3
    cryptography
    httpbin
    httpcore
    httplib2
    httpx
    pycurl; platform_python_implementation !='PyPy'
    pytest
    pytest-aiohttp
    pytest-asyncio
    pytest-cov
    pytest-httpbin
    requests>=2.22.0
    tornado
    urllib3
    werkzeug==2.0.3
